--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-SITE_NAME_HEADER=Cybercy's Notes Hub
+SITE_NAME_HEADER=Cybercy Knowledge Base
 SITE_MAIN_LANGUAGE=en
 SITE_BASE_URL=https://cybercy-data-protection.vercel.app/
 SHOW_CREATED_TIMESTAMP=false
